--- a/source/SyslogEnhanced.page
+++ b/source/SyslogEnhanced.page
@@ -22,15 +22,15 @@ $zip = str_replace(' ','_',strtolower($var['NAME']))."-syslog-".date('Ymd-Hi')."
 $search = array_map('str_getcsv', file('/usr/local/emhttp/plugins/enhanced.log/syslog.conf'));
 
 echo "<pre class='up'>";
-echo "<font size='3'>Legend=><font style='background-color:red' color='white'> Errors </font>";
+echo "<font size='3'><font style='background-color:red' color='white'> Errors </font>";
 echo "&nbsp;<font style='background-color:orange' color='black'> Minor Issues </font>";
 echo "&nbsp;<font style='background-color:lime' color='black'> Lime Tech </font>";
 echo "&nbsp;<font style='background-color:green' color='white'> unRAID engine </font>";
 echo "&nbsp;<font style='background-color:blue' color='white'> System </font>";
-echo "&nbsp;<font style='background-color:teal' color='white'> Drive related </font>";
+echo "&nbsp;<font style='background-color:gray' color='white'> File System </font>";
+echo "&nbsp;<font style='background-color:teal' color='white'> Drives </font>";
 echo "&nbsp;<font style='background-color:purple' color='white'> Network </font>";
 echo "&nbsp;<font style='background-color:olive' color='white'> Login </font>";
-echo "&nbsp;<font style='background-color:brown' color='white'> Misc </font>";
 echo "&nbsp;<font style='background-color:navy' color='white'> emhttp </font>";
 echo "&nbsp;</font></br></br>";
 
