--- a/source/SyslogEnhanced.page
+++ b/source/SyslogEnhanced.page
@@ -25,10 +25,10 @@ echo "<pre class='up'>";
 echo "<font size='3'><font style='background-color:red' color='white'> Errors </font>";
 echo "&nbsp;<font style='background-color:orange' color='black'> Minor Issues </font>";
 echo "&nbsp;<font style='background-color:lime' color='black'> Lime Tech </font>";
-echo "&nbsp;<font style='background-color:green' color='white'> unRAID engine </font>";
+echo "&nbsp;<font style='background-color:green' color='white'> Array </font>";
 echo "&nbsp;<font style='background-color:blue' color='white'> System </font>";
 echo "&nbsp;<font style='background-color:gray' color='white'> File System </font>";
-echo "&nbsp;<font style='background-color:teal' color='white'> Drives </font>";
+echo "&nbsp;<font style='background-color:teal' color='white'> Devices </font>";
 echo "&nbsp;<font style='background-color:purple' color='white'> Network </font>";
 echo "&nbsp;<font style='background-color:olive' color='white'> Login </font>";
 echo "&nbsp;<font style='background-color:navy' color='white'> emhttp </font>";
