--- a/source/SyslogEnhanced.page
+++ b/source/SyslogEnhanced.page
@@ -21,15 +21,16 @@ Icon="enhanced.log.png"
 $zip = str_replace(' ','_',strtolower($var['NAME']))."-syslog-".date('Ymd-Hi').".zip";
 
 /* Array of strings and highlight colors - "search string", "background color", "font color". */
-$pre_defined = array_map('str_getcsv', file('/usr/local/emhttp/plugins/enhanced.log/syslog.conf'));
+$pre_defined = array_map('str_getcsv', file('/usr/local/emhttp/plugins/enhanced.log/syslog_match.conf'));
 $custom = array_map('str_getcsv', file('/boot/config/plugins/enhanced.log/custom_syslog.conf'));
-$search = array_merge($pre_defined, $custom);
+$match = array_merge($pre_defined, $custom);
 
 /* Assign colors from configuration file. */
 $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.log.cfg" );
 
 echo "<pre class='up'>";
 echo "<font size='3'>";
+
 if ($enhanced_log_cfg['ERRORS'] == "yes") {
 	$errors_color = $enhanced_log_cfg['ERRORS_CLR'];
    	echo "<font style='background-color:$errors_color'> Errors </font>&nbsp;";
@@ -109,40 +110,40 @@ if ($enhanced_log_cfg['OTHER'] == "yes") {
 
 /* Adjust array colors. */
 $i = 0;
-foreach ($search as $s) {
+foreach ($match as $s) {
 	switch ($s[1]) {
 		case ($s[1] == "error"):
-			$search[$i][1] = $errors_color;
+			$match[$i][1] = $errors_color;
 			break;
 		case ($s[1] == "minor issue"):
-			$search[$i][1] = $minor_issues_color;
+			$match[$i][1] = $minor_issues_color;
 			break;
 		case ($s[1] == "lime tech"):
-			$search[$i][1] = $lime_tech_color;
+			$match[$i][1] = $lime_tech_color;
 			break;
 		case ($s[1] == "array"):
-			$search[$i][1] = $array_color;
+			$match[$i][1] = $array_color;
 			break;
 		case ($s[1] == "system"):
-			$search[$i][1] = $system_color;
+			$match[$i][1] = $system_color;
 			break;
 		case ($s[1] == "file system"):
-			$search[$i][1] = $file_system_color;
+			$match[$i][1] = $file_system_color;
 			break;
 		case ($s[1] == "devices"):
-			$search[$i][1] = $devices_color;
+			$match[$i][1] = $devices_color;
 			break;
 		case ($s[1] == "network"):
-			$search[$i][1] = $network_color;
+			$match[$i][1] = $network_color;
 			break;
 		case ($s[1] == "login"):
-			$search[$i][1] = $login_color;
+			$match[$i][1] = $login_color;
 			break;
 		case ($s[1] == "emhttp"):
-			$search[$i][1] = $emhttp_color;
+			$match[$i][1] = $emhttp_color;
 			break;
 		case ($s[1] == "other"):
-			$search[$i][1] = $other_color;
+			$match[$i][1] = $other_color;
 			break;
 		default:
 			break;			
@@ -156,7 +157,7 @@ echo "<div style='height:650px;width:1245px;border:2px solid #ccc;overflow:auto;
 foreach (file('/var/log/syslog') as $line) {
 	$found_it = false;
 	$i = 0;
-	foreach ($search as $s) {
+	foreach ($match as $s) {
 		if (($s[1] !== "") && (preg_match("/$s[0]/i", $line))) {
 			$found_it = true;
 			break;
@@ -165,7 +166,7 @@ foreach (file('/var/log/syslog') as $line) {
 	}
 
 	if (($found_it) && ($s[1] !== "skip")) {
-		echo "<font style='background-color:".$search[$i][1]."';>$line</font>";
+		echo "<font style='background-color:".$match[$i][1]."';>$line</font>";
 	} else {
 		echo $line;
 	}
