--- a/source/SyslogEnhanced.page
+++ b/source/SyslogEnhanced.page
@@ -34,82 +34,79 @@ if ($enhanced_log_cfg['OTHER'] == "yes") {
 unset($pre_defined);
 unset($custom);
 
-echo "<pre class='up'>";
-echo "<font size='3'>";
-
 if ($enhanced_log_cfg['ERRORS'] == "yes") {
 	$errors_color = $enhanced_log_cfg['ERRORS_CLR'];
-   	echo "<font style='background-color:$errors_color'> Errors </font>&nbsp;";
+	$errors_tag = "<font size=3 style='background-color:$errors_color'>&nbsp;Errors&nbsp;</font>";
 } else {
 	$errors_color = "";
 }
 
 if ($enhanced_log_cfg['MINOR_ISSUES'] == "yes") {
 	$minor_issues_color = $enhanced_log_cfg['MINOR_ISSUES_CLR'];
-	echo "<font style='background-color:$minor_issues_color'> Minor Issues </font>&nbsp;";
+	$minor_issues_tag = "<font size=3 style='background-color:$minor_issues_color'>&nbspMinor Issues&nbsp</font>";
 } else {
 	$minor_issues_color = "";
 }
 
 if ($enhanced_log_cfg['LIME_TECH'] == "yes") {
 	$lime_tech_color = $enhanced_log_cfg['LIME_TECH_CLR'];
-	echo "<font style='background-color:$lime_tech_color'> Lime Tech </font>&nbsp;";
+	$lime_tech_tag = "<font size='3' style='background-color:$lime_tech_color'>&nbsp;Lime Tech&nbsp;</font>";
 } else {
 	$lime_tech_color = "";
 }
 
 if ($enhanced_log_cfg['ARRAY'] == "yes") {
 	$array_color = $enhanced_log_cfg['ARRAY_CLR'];
-	echo "<font style='background-color:$array_color'> Array </font>&nbsp;";
+	$array_tag = "<font size='3' style='background-color:$array_color'>&nbsp;Array&nbsp;</font>";
 } else {
 	$array_color = "";
 }
 
 if ($enhanced_log_cfg['SYSTEM'] == "yes") {
 	$system_color = $enhanced_log_cfg['SYSTEM_CLR'];
-	echo "<font style='background-color:$system_color'> System </font>&nbsp;";
+	$system_tag = "<font size='3' style='background-color:$system_color'>&nbsp;System&nbsp;</font>";
 } else {
 	$system_color = "";
 }
 
 if ($enhanced_log_cfg['FILE_SYSTEM'] == "yes") {
 	$file_system_color = $enhanced_log_cfg['FILE_SYSTEM_CLR'];
-	echo "<font style='background-color:$file_system_color'> File System </font>&nbsp;";
+	$file_system_tag = "<font size='3' style='background-color:$file_system_color'>&nbsp;File System&nbsp;</font>";
 } else {
 	$file_system_color = "";
 }
 
 if ($enhanced_log_cfg['DEVICES'] == "yes") {
 	$devices_color = $enhanced_log_cfg['DEVICES_CLR'];
-	echo "<font style='background-color:$devices_color'> Devices </font>&nbsp;";
+	$devices_tag = "<font size='3' style='background-color:$devices_color'>&nbsp;Devices&nbsp;</font>";
 } else {
 	$devices_color = "";
 }
 
 if ($enhanced_log_cfg['NETWORK'] == "yes") {
 	$network_color = $enhanced_log_cfg['NETWORK_CLR'];
-	echo "<font style='background-color:$network_color'> Network </font>&nbsp;";
+	$network_tag = "<font size='3'style='background-color:$network_color'>&nbsp;Network&nbsp;</font>";
 } else {
 	$network_color = "";
 }
 
 if ($enhanced_log_cfg['LOGIN'] == "yes") {
 	$login_color = $enhanced_log_cfg['LOGIN_CLR'];
-	echo "<font style='background-color:$login_color'> Login </font>&nbsp;";
+	$login_tag = "<font size='3' style='background-color:$login_color'>&nbsp;Login&nbsp;</font>";
 } else {
 	$login_color = "";
 }
 
 if ($enhanced_log_cfg['EMHTTP'] == "yes") {
 	$emhttp_color = $enhanced_log_cfg['EMHTTP_CLR'];
-	echo "<font style='background-color:$emhttp_color'> emhttp </font>&nbsp;";
+	$emhttp_tag = "<font size='3' style='background-color:$emhttp_color'>&nbsp;emhttp&nbsp;</font>";
 } else {
 	$emhttp_color = "";
 }
 
 if ($enhanced_log_cfg['OTHER'] == "yes") {
 	$other_color = $enhanced_log_cfg['OTHER_CLR'];
-	echo "<font style='background-color:$other_color'> Other </font>&nbsp;";
+	$other_tag = "<font size='3' style='background-color:$other_color'>&nbsp;Other&nbsp;</font>";
 } else {
 	$other_color = "";
 }
@@ -157,9 +154,7 @@ foreach ($match as $s) {
 	$i++;
 }
 
-echo "</font><br/><br/>";
-
-echo "<div style='height:650px;width:1245px;border:2px solid #ccc;overflow:auto;'>";
+echo "<pre class='up' style='display:none'>";
 foreach (file('/var/log/syslog') as $line) {
 	$found_it = false;
 	$i = 0;
@@ -177,7 +172,6 @@ foreach (file('/var/log/syslog') as $line) {
 		echo $line;
 	}
 }
-echo "</div>";
 echo "</pre>";
 
 ?>
@@ -197,6 +191,41 @@ function getlog() {
     setTimeout(cleanUp,4000);
   });
 }
-$('.tabs').append("<span class='status vhshift'><input type='button' value='Download' onclick='getlog()'></span>");
+$(function() {
+  $('pre.up').css('height',Math.max(screen.height-380,380)).show();
+});
+<?if ($other_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$other_tag?></span>");
+<?endif;?>
+<?if ($emhttp_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$emhttp_tag?></span>");
+<?endif;?>
+<?if ($login_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$login_tag?></span>");
+<?endif;?>
+<?if ($network_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$network_tag?></span>");
+<?endif;?>
+<?if ($devices_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$devices_tag?></span>");
+<?endif;?>
+<?if ($file_system_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$file_system_tag?></span>");
+<?endif;?>
+<?if ($system_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$system_tag?></span>");
+<?endif;?>
+<?if ($array_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$array_tag?></span>");
+<?endif;?>
+<?if ($lime_tech_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$lime_tech_tag?></span>");
+<?endif;?>
+<?if ($minor_issues_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$minor_issues_tag?></span>");
+<?endif;?>
+<?if ($errors_color!=""):?>
+	$('.tabs').append("<span class='status'><span><?=$errors_tag?></span>");
+<?endif;?>
 </script>
 <input type="button" value="Download" onclick="getlog()"><input type="button" value="Done" onclick="done()">
